WebCore: REGRESSION (r49268): DHTML drag not allowed unless event.dataTransfer.effectAllowed is set (differs from HTML5). Fixes <https://bugs.webkit.org/show_bug.cgi?id=33607> and <rdar://7507114>.

Reviewed by Adam Roben.

If no effectAllowed is set in the dragStart operation, we should default to
uninitialized instead of none, so the user doesn't have to manually set the
effectAllowed to enable drag and drop.

* dom/Clipboard.cpp:
(WebCore::Clipboard::Clipboard):

LayoutTests: REGRESSION (r49268): DHTML drag not allowed unless event.dataTransfer.effectAllowed
is set (differs from HTML5).
Fixes <https://bugs.webkit.org/show_bug.cgi?id=33607> and <rdar://7507114>.

Reviewed by Adam Roben.

Updated the drag and drop test to test if effectAllowed isn't set, in addition
to its other tests.

* fast/events/drag-and-drop-expected.txt:
* fast/events/drag-and-drop.html:



Canonical link: https://commits.webkit.org/44611@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53203 268f45cc-cd09-0410-ab3c-d52691b4dbfc